--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  notepad_core: ^1.3.0
+  notepad_core_web: ^1.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
